# sphinx-needs-enterprise

./: .buildinfo  .flake8  .gitignore  .readthedocs.yaml  AUTHORS  LICENSE  Makefile  README.rst  changelog.html  contribute.html  genindex.html  index.html  installation.html  license.html  needs_save.json  noxfile.py  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js  sitemap.xml
.github/workflows/: cb_docker.yml  ci.yaml  docs_and_presentations.yml  sphinx_docs.yml  sphinx_presentations.yml  test_cb_docker.yml
_sources/: contribute.rst.txt  index.rst.txt  installation.rst.txt  license.rst.txt
_sources/api/: index.rst.txt
_sources/scripts/: cb2needs.rst.txt  dev.rst.txt  import.rst.txt  index.rst.txt  render.rst.txt
_sources/services/: azure.rst.txt  codebeamer.rst.txt  index.rst.txt
_static/: panels-variables.8c0628e7e33bedb29c2dfe2857f560c3.css
api/: extensions.html  index.html
docker/: docker-compose.yml
docker/codebeamer/: docker-compose.yml
docker/elasticsearch/: docker-compose.yml
docker/jira/: docker-compose.yml
docker/splunk/: docker-compose.yml
docs/: changelog.rst  conf.py  contribute.rst  index.rst  installation.rst  license.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: extensions.rst
docs/scripts/: dev.rst  export.rst  import.rst  index.rst  render.rst
docs/services/: azure.rst  codebeamer.rst  excel.rst  index.rst  (+1 more)
presentations/: .buildinfo  becoming_reliable.html  becoming_reliable.rst  conf.py  genindex.html  index.html  index.rst  objects.inv  requirements.txt  search.html  searchindex.js  why_enterprise_license.html  why_enterprise_license.rst
revealjs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  why_enterprise_license.html
scripts/: cb2needs.html  dev.html  export.html  import.html  index.html  render.html
services/: azure.html  codebeamer.html  excel.html  index.html  jira.html
sphinx_needs_enterprise/: __init__.py  config.py  exceptions.py  license.py  sne.py  util.py
tests/: README  conftest.py  docker_cb_api_test.py  test_codebeamer.py  test_docker_cb_api.py  test_excel.py  test_spreadsheet.py
(+54 files in other folders)
