[tool.poetry]
name = "sphinx-needs-enterprise"
version = "0.1.0"
description = ""
authors = ["team useblocks"]

license = "BSL 1.1"
readme = "README.rst"
repository = "http://github.com/useblocks/sphinx-needs-enterprise"
documentation = "https://useblocks.com/sphinx-needs-enterprise"

[tool.poetry.dependencies]
python = "^3.6"
sphinxcontrib-needs = "0.7.2"
licensing = "^0.31"
requests = "^2.26.0"
jinja2 = "^3.0.2"
jira2markdown = "^0.2.0"
m2r = "^0.2.1"

[tool.poetry.dev-dependencies]
# test dependencies
sphinx-testing = ">=1.0"

# lint dependences
flake8 = "^3.9.0"
pep8-naming = "^0.11.1"

# formatting dependencies
black = "^20.8b1"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.extras]
docs = ["sphinx>=4.0"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"


