[tool.poetry]
name = "sphinx-needs-enterprise"
version = "1.0.1"
description = ""
authors = ["team useblocks"]

license = "BSL 1.1"
readme = "README.rst"
repository = "http://github.com/useblocks/sphinx-needs-enterprise"
documentation = "https://useblocks.com/sphinx-needs-enterprise"

[tool.poetry.dependencies]
python = ">3.7,<4.0"
sphinx = ">=4.2"
sphinx-needs = ">=1.0.1"
licensing = ">=0.31"
requests = ">=2"
jinja2 = ">=2"
jira2markdown = ">=0.1"
m2r2 = ">=0.2"
click = ">=7.0"
sphinxcontrib-programoutput = ">=0.17"
azure-devops = ">=6.0.0-beta.4"
elasticsearch = ">=7.15"
tqdm = ">=4.40"
openpyxl = ">=3.0.0"

[tool.poetry.dev-dependencies]
# test dependencies
sphinx-testing = ">=1.0"

# lint dependences
flake8 = "^3.9.0"
pep8-naming = "^0.11.1"

# formatting dependencies
black = "^22"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
typed_ast = "^1.5.0"

[tool.poetry.scripts]
sne = "sphinx_needs_enterprise.scripts.cli:cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.extras]
docs = {version = ">= 4.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"


